# ero-lh-class

./: .gitignore  Makefile  README.md  classification_pipline.py  lh_class_scheme.drawio  lh_classification_architecture.drawio  playground.ipynb  pyproject.toml
data/output_data/: matched_and_classified.gz_pkl
lh_class/: lh_functions.py
lh_class/scripts/: classification_pipeline.py  classification_pipline.py  lh_class.py  srgz_preprocess.py
