[tool.poetry]
name = "lh-code"
version = "0.1.0"
description = ""
authors = ["Miсhael Belvedersky <mike.belveder@gmail.com>"]
readme = "README.md"
packages = [{include = "lh_class"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0.0"
numpy = "^1.24.2"
seaborn = "^0.12.2"
astropy = "^5.2.2"
uncertainties = "^3.1.7"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
lh-class = "lh_class.scripts.lh_class:main"